Gennerate a new app to be the reference app, and update doc
